--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -47,6 +47,8 @@ spec:
         env:
         - name: PODINFO_UI_COLOR
           value: "#34577c"
+        - name: TEST
+          value: "001001001"
         livenessProbe:
           exec:
             command:
